Pig-Game-4-two-dice>  1) Add two dice in the game instead of one dice 2) if any one of dice rolls one next player gets th turn 3) if any one dice on a round for a player shows two consecutive 6s the player looses the entire game 4) show the winning limir form again after hitting new game

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <button class="btn-limit" id="btn-limit" type="button">Play</button>
       </form>
       <img src="./images/dice-5.png" alt="Dice" class="dice" />
+        <img src="./images/dice-5.png" alt="Dice2" class="dice2" />
     </div>
 
     <script src="./js/app.js"></script>
