PG> Correct images path in the game
PG> Correct images path in the game

--- a/index.html
+++ b/index.html
@@ -1,29 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato:100,300,600"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
-      rel="stylesheet"
-      type="text/css"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,600" rel="stylesheet" type="text/css" />
+    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css" />
     <link type="text/css" rel="stylesheet" href="./css/style.css" />
 
     <title>Pig Game</title>
-  </head>
+</head>
 
-  <body>
-    
-<!-- Error message for loosing  -->
-      <div class="alert" id='close-messgage'>
-        <span
-          class="closebtn" id='close-btn'
-          >&times;</span id="error-message"
+<body>
+
+    <!-- Error message for loosing  -->
+    <div class="alert" id='close-messgage'>
+        <span class="closebtn" id='close-btn'>&times;</span id="error-message"
         >
         Game Over !
       </div>
@@ -60,8 +51,8 @@
         <input name="limit" type="text" id="limit-score" />
         <button class="btn-limit" id="btn-limit" type="button">Play</button>
       </form>
-      <img src="./images/dice-5.png" alt="Dice" class="dice" />
-        <img src="./images/dice-5.png" alt="Dice2" class="dice2" />
+      <img src="images/dice-5.png" alt="Dice" class="dice" />
+        <img src="images/dice-5.png" alt="Dice2" class="dice2" />
     </div>
 
     <script src="./js/app.js"></script>
